# R2040_LVGL_ST7789_2.8

./: README.md  lv_conf.h  main.c
AI_examples/Studio Google/: cnc_gui.c  cnc_gui.h  gui.c  gui.h
AI_examples/copilot/: main_screen.c  main_screen.h
DMA/: CMakeLists.txt  lv_conf.h
DMA/inc/: lv_port_disp.h  lv_port_indev.h  st7789.h
DMA/src/: lv_port_disp.c  lv_port_indev.c  st7789.c  xpt2046.c
SquareLine/ui/: CMakeLists.txt
inc/: lv_port_disp.h  st7789.h  xpt2046.h
src/: lv_port_disp.c  st7789.c  xpt2046.c
